<resources>
    <string name="app_name">Instagram_Android_Moon</string>
    <string name="from">from</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- auto login -->
    <string name="auto_id">linirini</string>
    <string name="auto_password">instagram</string>

    <!--menu item-->
    <string name="home">home</string>
    <string name="explore">explore</string>
    <string name="post">post</string>
    <string name="reels">reels</string>
    <string name="profile">profile</string>

    <!--profile & feed item-->
    <string name="userName">userName</string>
    <string name="uesr_introduction">introduction</string>
    <string name="place">place</string>
    <string name="like">좋아요 0개</string>
    <string name="content">                      content</string>
    <string name="comment_all_show">댓글 모두 보기</string>
    <string name="comments">userName / comment</string>
    <string name="add_comment">댓글 추가&#8230;</string>
    <string name="add_reply">답글 달기</string>
    <string name="post_date">0일 전</string>
    <string name="translate"> · 번역 보기</string>
    <string name="edited"> · 수정됨</string>
    <string name="profile_edit">프로필 편집</string>
    <string name="profile_share">프로필 공유</string>
    <string name="discover_people">사람 찾아보기</string>
    <string name="see_all">모두 보기</string>
    <string name="posting">게시물</string>
    <string name="follow">팔로우</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>

    <!-- story -->
    <string name="myStory">내 스토리</string>

    <!-- 새 게시물 안내 -->
    <string name="add_photo_profile">프로필</string>
    <string name="add_photo_guide">사진과 동영상을 공유하면 프로필에\n표시됩니다.</string>
    <string name="add_photo_btn">첫 사진/동영상을 공유해보세요</string>
    <!-- 태그 게시물 안내 -->
    <string name="tagged_photo">회원님이 나온 사진 및 동영상</string>
    <string name="tagged_photo_guide">사람들이 회원님을 사진 및 동영상에 태그하면\n태그된 사진 및 동영상이 여기에 표시됩니다.</string>
    <!-- 사람 찾아보기 안내 -->
    <string name="new_sign_up">Instagram 신규 가입</string>

    <!-- new post -->
    <string name="new_post">새 게시물</string>
    <string name="gallery">갤러리</string>

    <!-- comment -->
    <string name="comment">댓글</string>
    <string name="comment_post">게시</string>

    <!-- follows -->
    <string name="search">검색</string>


    <!-- sign_in -->
    <string name="hint_id_sign_in">사용자 이름, 이메일 주소 또는 휴대폰 번호</string>
    <string name="hint_pw_sign_in">비밀번호</string>
    <string name="btn_sign_in">로그인</string>
    <string name="tv_forget_pw">비밀번호를 잊으셨나요?</string>
    <string name="btn_sign_up">새 계정 만들기</string>
    <string name="language">한국어</string>
    <string name="next_step">다음</string>
    <string name="skip">건너뛰기</string>
    <string name="log_out">로그아웃</string>
    <!-- already_signed_up -->
    <string name="already_signed_up">이미 계정이 있으신가요?</string>
    <string name="btn_continue_signing_up">이미 계정이 있으신가요?</string>
    <!-- email -->
    <string name="email_address_input">이메일 주소 입력</string>
    <string name="email_address_guide">회원님에게 연락할 수 있는 이메일 주소를 입력하세요. 이 이메일 주소는 프로필에서 다른 사람에게 공개되지 않습니다.</string>
    <string name="email_address">이메일 주소</string>
    <string name="sign_up_for_phone_number">휴대폰 번호로 가입하기</string>
    <!-- phone -->
    <string name="phone_number_input">휴대폰 번호 입력</string>
    <string name="phone_number_guide">회원님에게 연락할 수 있는 휴대폰 번호를 입력하세요. 이 휴대폰 번호는 프로필에서 다른 사람에게 공개되지 않습니다.</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="phone_number_guide_sms">보안 및 로그인 목적으로 Instagram에서 보내는 SMS 알림을 수신할 수 있습니다.</string>
    <string name="sign_up_for_email_address">이메일 주소로 가입하기</string>
    <!-- certification_email/phone -->
    <string name="certification_code_input">인증 코드 입력</string>
    <string name="certification_code_input_guide">계정을 확인하려면 ${email address} 주소/${phone number}번으로 전송된 6자리 코드를 입력하세요.</string>
    <string name="certification_code">인증 코드</string>
    <string name="not_received_code">코드를 받지 못했습니다.</string>
    <!-- name -->
    <string name="name_input">이름 입력</string>
    <string name="name">성명</string>
    <!-- password -->
    <string name="password_input">6자 이상의 문자 또는 숫자로\n비밀번호를 만드세요</string>
    <string name="password_input_guide">다른 사람이 추측할 수 없는 6자 이상의 문자 또는 숫자로 보안 수준이 높은 비밀번호를 만드세요.</string>
    <string name="password">비밀번호</string>
    <!-- save_sign_in_info -->
    <string name="save_sign_in_info">로그인 정보를 저장하시겠어요?</string>
    <string name="save_sign_in_info_guide"> 계정의 로그인 정보가 저장되므로 다음에 로그인할 때 로그인 정보를 다시 입력하지 않아도 됩니다.</string>
    <string name="save_now">저장</string>
    <string name="save_later">나중에 하기</string>
    <!-- birth_date -->
    <string name="birth_date_input">생년월일 입력</string>
    <string name="birth_date_input_guide">비즈니스, 반려동물 또는 기타 목적으로 이 계정을 만드는 경우에도 회원님의 실제 생년월일을 사용하세요. 이 생년월일 정보는 프로필에서 다른 사람에게 공개되지 않습니다. 왜 생년월일을 입력해야 하나요?</string>
    <string name="birth_date_hint">생일(0세)</string>
    <string name="birth_date">생년월일</string>
    <string name="birth_date_input_guide_dialog_title">생일</string>
    <string name="birth_date_input_guide_dialog_content">생년월일을 입력하면 회원님에게 제공되는 기능 및 광고가 개선되며 Instagram 커뮤니티를 안전하게 유지하는 데 도움이 됩니다. 입력한 생년월일 정보는 개인 정보 계정 설정에서 확인할 수 있습니다. 더 알아보기</string>
    <!-- user_name -->
    <string name="user_name_input">사용자 이름 만들기</string>
    <string name="user_name_input_guide">사용자 이름을 추가하거나 추천 이름을 사용하세요.\n언제든지 변경할 수 있습니다.</string>
    <string name="user_name">사용자 이름</string>
    <!-- Instagram_Terms_and_Policies -->
    <string name="agreement_on_terms">Instagram 약관 및 정책에 동의</string>
    <string name="agreement_on_terms_guide">계정을 만들려면 모든 약관에 동의해주세요.</string>
    <string name="terms_of_use">이용 약관</string>
    <string name="select_all">모두 선택</string>
    <string name="select_all_cancel">모두 선택 취소</string>
    <string name="terms_of_use_essential">이용 약관(필수)</string>
    <string name="privacy_policy_essential">개인정보처리방침(필수)</string>
    <string name="location_based_features_essential">위치 기반 기능(필수)</string>
    <string name="learn_more">더 알아보기</string>
    <string name="agree">동의</string>
    <!-- add_profile_image -->
    <string name="add_profile_image">프로필 사진 추가</string>
    <string name="add_profile_image_guide">친구들이 회원님을 알아볼 수 있도록 프로필 사진을 추가하세요. 프로필 사진은 모든 사람에게 공개됩니다.</string>
    <string name="add_profile_image_add_image">사진 추가</string>
    <string name="add_profile_image_choose_at_gallery">갤러리에서 선택</string>
    <string name="add_profile_image_take_a_picture">사진 찍기</string>
    <!-- welcome_instagram -->
    <string name="welcome_instagram_with_user_name">님, Instagram에 오신 것을 환영합니다</string>
    <string name="welcome_instagram_guide">이제 몇 가지 단계를 통해 이용 환경을 원하는 대로\n설정해보세요</string>
    <!-- agreement_to_use_Instagram -->
    <string name="agreement_to_use_Instagram">Instagram 앱을 사용하려면 다음 항목에 동의해야 합니다</string>
    <string name="agreement_to_use_Instagram_guide">다음은 Meta에서 서비스를 제공하기 위해 회원님의 정보를 이용할 수 있는 몇 가지 주된 방법입니다. 회원님이 각 항목을 검토하고 동의하셔야 합니다.</string>
    <string name="collection_and_use_personal_information">개인정보의 수집 및 이용 [필수]</string>
    <string name="collection_and_use_personal_information_guide">Meta Platforms, Inc.가 서비스 제공 및 맞춤화, 분석, 안전 및 보안, 맞춤형 과고 표시를 위한 개인정보 수집 및 이용에 동의합니다. 더 알아보기</string>
    <string name="data_sharing_with_meta_companies">다른 Meta Companies와 데이터 공유[필수]</string>
    <string name="data_sharing_with_meta_companies_guide">Meta Platforms, Inc.가 다른 Meta Companies에 개인정보를 공유하는 데 동의합니다. 더 알아보기</string>
    <string name="cross_border_transfer_of_personal_information">개인정보의 국가 간 이전[필수]</string>
    <string name="cross_border_transfer_of_personal_information_guide">Meta Platforms, Inc.가 서비스를 제공하기 위해 전 세계의 지사, 데이터 센터 및 파트너 비즈니스에 개인정보를 이전하는 데 동의합니다. 더 알아보기</string>
    <string name="location_information">위치 정보[필수]</string>
    <string name="location_information_guide">Meta Platforms, Inc.의 위치 기반 서비스 약관에 동의합니다.</string>
    <string name="btn_agree_on_agreement">동의함</string>
    <string name="agree_on_agreement_guide">동의함을 누르면 위 정보의 수집, 이용, 제공 및 방침과 약관에 동의함을 확인하게 됩니다. 동의하지 않으면 계정을 만들 수 없습니다.</string>
    <!-- complete_agreement -->
    <string name="complete_agreement">완료되었습니다!</string>
    <string name="thanks_for_complete_agreement">정보 수집, 이용 및 제공에 관한 내용을 검토하고 동의해주셔서 감사합니다.</string>
    <string name="close">닫기</string>
    <!-- discover_facebook_friends_for_following -->
    <string name="discover_facebook_friends_for_following">팔로우할 Facebook 친구 찾기</string>
    <string name="discover_facebook_friends_for_following_guide">회원님이 팔로우할 사람을 직접 선택하며,\n회원님의 허락 없이는 Facebook에 게시되지\n않습니다.</string>
    <string name="discover_facebook_friends">친구 찾기</string>
    <string name="discover_facebook_friends_dialog_guide">Instagram은 친구들과 함께할수록 즐겁습니다. 게시물을 보고 싶은 친구를 팔로우해보세요. 이 단계를 건너뛰시겠어요?</string>
    <!-- discover_friends_with_contact_sync -->
    <string name="discover_friends_with_contact">연락처를 동기화하여 친구를 찾아보세요</string>
    <string name="discover_friends_with_contact_guide">Instagram에서 아는 사람을 찾고 팔로우할 사람을\n선택하세요.</string>
    <string name="discover_friends_with_contact_guide_sync">연락처가 정기적으로 동기화되고 서버에 안전하게 저장됩니다.\n설정에서 언제든지 동기화를 해제할 수 있습니다. 더 알아보기.</string>
    <string name="sync">동기화</string>

    <!-- posting_option -->
    <string name="hide_like_guide">이 게시물의 총 좋아요 및 조회수는 회원님만 볼 수 있습니다. 나중에\n게시물 상단에 있는 ⠇메뉴에서 이 설정을 변경할 수 있습니다. 다른 사람의\n게시물에서 좋아요 수를 숨기려면 계정 설정으로 이동하세요. 더 알아보기</string>
    <string name="hide_comment_function">나중에 게시물 상단의 메뉴(⠇)에서 이 설정을 변경할 수 있습니다.</string>
    <string name="share_to_facebook">사진과 동영상 게시물이 Facebook에 자동으로 공유됩니다.</string>
    <string name="input_replace_text">대체 텍스트는 시각적으로 사진을 보기 어려운 사람들에게 사진 내용을 설명하는 텍스트입니다. 대체 텍스트는 회원님의 사진에 대해 자동으로 생성되며, 직접 입력할 수도 있습니다.</string>
</resources>