<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.signup.email.GetEmailAddressFragment"
    android:background="@color/background_sign_in"
    android:padding="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_get_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address_input"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_get_email_address_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address_guide"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_get_email_address"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_get_email_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_edt_sign_in_background"
        android:textSize="17sp"
        android:hint="@string/email_address"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/tv_get_email_address_guide"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_email_address_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/next_step"
        android:textSize="17sp"
        android:background="@drawable/shape_btn_sign_in_background"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/edt_get_email_address"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_email_address_sign_up_for_phone_number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/sign_up_for_phone_number"
        android:textSize="15sp"
        android:stateListAnimator="@null"
        android:background="@drawable/shape_btn_sign_up_background"
        android:textColor="@color/tv_forget_pw"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_get_email_address_next"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_get_email_address_already_signed_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_signed_up"
        android:textSize="12sp"
        android:textColor="@color/already_signed_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="3dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>