<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.signup.phone.GetPhoneNumberFragment"
    android:background="@color/background_sign_in"
    android:padding="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_get_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_input"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_get_phone_number_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_guide"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_get_phone_number"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_in_phone"
        style="@style/textInputLayoutStyle"
        android:theme="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_get_phone_number_guide"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedt_sign_in_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edt_sign_in_background"
            android:hint="@string/phone_number"
            android:textSize="17sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_get_phone_number_guide_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_guide_sms"
        android:textSize="13sp"
        android:textColor="@color/tv_guide_sms"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/til_sign_in_phone"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_phone_number_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/next_step"
        android:textSize="17sp"
        android:background="@drawable/shape_btn_sign_in_background"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/tv_get_phone_number_guide_sms"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_phone_number_sign_up_for_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/sign_up_for_email_address"
        android:textSize="15sp"
        android:stateListAnimator="@null"
        android:background="@drawable/shape_btn_sign_up_background"
        android:textColor="@color/tv_forget_pw"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_get_phone_number_next"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_get_phone_number_already_signed_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_signed_up"
        android:textSize="12sp"
        android:textColor="@color/already_signed_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="3dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>